# syncr

./: .gitignore  Cargo.toml  README.md  clean.ps1  config.aeon  setup.ps1
src/: args.rs  config.rs  dir_tree.rs  fs.rs  heuristics.rs  init.rs  macros.rs  main.rs  project.rs  refresh.rs  sync.rs  util.rs
